# Retail-Sense-AI

./: README.md  pyproject.toml  requirements.txt  retail-sense-ai-app.py  sample.env  sample_products.json
