[project]
name = "retail-sense-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.64",
    "gradio>=5.49.1",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "langchain-nvidia-ai-endpoints>=0.3.19",
    "langchain-text-splitters>=0.3.11",
    "opensearch-py>=3.0.0",
    "pypdf>=6.1.3",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.1",
]
